# webcrank.hs

./: .ghci  .travis.yml  COPYING  HLint.hs  LICENCE  Makefile  README.md  TODO.md  default.nix  webcrank.cabal
src/: Webcrank.hs
src/Webcrank/: Conneg.hs  Core.hs  DecisionCore.hs  Internal.hs  Method.hs  Parsers.hs  Prelude.hs  ServerAPI.hs  StatusCode.hs  StatusCodes.hs  Types.hs
src/Webcrank/Internal/: DecisionCore.hs  ETag.hs  Halt.hs  HandleRequest.hs  Headers.hs  Parsers.hs  ReqData.hs  ReqState.hs  ResourceData.hs  ServerAPI.hs  Types.hs  WebcrankT.hs
src/Webcrank/ServerAPI/: WebcrankT.hs
src/Webcrank/Types/: Internal.hs  MediaType.hs  Resource.hs
test/: .ghci  ConnegTests.hs  DecisionTests.hs  HandleRequestTests.hs  ParserTests.hs  ResourceTests.hs  TestData.hs  TestServerAPI.hs  hunit.hs  tests.hs
test/Test/QuickCheck/: Assertion.hs
test/Webcrank/: ExampleSpec.hs
travis/: cabal-apt-install
