name:               webcrank
version:            0.1
license:            BSD3
license-file:       LICENCE
author:             Mark Hibberd <mark@hibberd.id.au>
maintainer:         Mark Hibberd <mark@hibberd.id.au>
copyright:          (c) 2012 Mark Hibberd
synopsis:           Webmachine inspired toolkit for building http applications and services.
category:           Web
homepage:           https://github.com/webcrank/webcrank
bug-reports:        https://github.com/webcrank/webcrank/issues
cabal-version:      >= 1.8
build-type:         Simple
description:
  Webmachine inspired toolkit for building http applications and services.

source-repository   head
  type:             git
  location:         https://github.com/webcrank/webcrank.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  build-depends:
                    attoparsec                      >= 0.10
                  , base                            >= 4.6 && < 5
                  , blaze-builder
                  , bytestring                      >= 0.10.0
                  , case-insensitive                >= 1.0
                  , either
                  , exceptions
                  , http-date                       >= 0.0.1
                  , http-media                      >= 0.4.0
                  , http-types                      >= 0.8.0
                  , network-uri                     >= 2.5.0
                  , lens                            >= 4.5
                  , mtl                             >= 2.0
                  , semigroups                      >= 0.8.3.1
                  , text                            >= 0.11
                  , transformers                    >= 0.2
                  , unordered-containers
                  , utf8-string                     >= 0.3.7

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:  Webcrank
                    Webcrank.ServerAPI
                    Webcrank.ServerAPI.WebcrankT
                    Webcrank.Internal
                    Webcrank.Internal.DecisionCore
                    Webcrank.Internal.Halt

  other-modules:    Webcrank.Internal.ETag
                    Webcrank.Internal.HandleRequest
                    Webcrank.Internal.Headers
                    Webcrank.Internal.Parsers
                    Webcrank.Internal.ReqData
                    Webcrank.Internal.ResourceData
                    Webcrank.Internal.Types

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   test
  build-depends:
                    QuickCheck
                  , tasty            >= 0.3
                  , tasty-hunit      >= 0.2
                  , tasty-quickcheck >= 0.3

                  , attoparsec                      >= 0.10
                  , base                            >= 4.6 && < 5
                  , bytestring                      >= 0.10.0
                  , case-insensitive                >= 1.0
                  , either
                  , exceptions
                  , http-date                       >= 0.0.1
                  , http-media                      >= 0.4.0
                  , http-types                      >= 0.8.0
                  , lens
                  , mtl                             >= 2.0
                  , unordered-containers
                  , webcrank
