name:               webcrank
version:            0.2.0.1
license:            BSD3
license-file:       LICENSE
author:             Mark Hibberd <mark@hibberd.id.au>
maintainer:         Richard Wallace <rwallace@thewallacepack.net>
copyright:          (c) 2012 Mark Hibberd
synopsis:           Webmachine inspired toolkit for building http applications and services.
category:           Web
homepage:           https://github.com/webcrank/webcrank.hs
bug-reports:        https://github.com/webcrank/webcrank.hs/issues
cabal-version:      >= 1.8
build-type:         Simple
description:
  Webmachine inspired toolkit for building http applications and services.

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  HLint.hs
  LICENSE
  README.md

source-repository   head
  type:             git
  location:         https://github.com/webcrank/webcrank.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  build-depends:    attoparsec                      >=0.10 && <0.13
                  , base                            >=4.6 && < 5
                  , blaze-builder                   >=0.2.1.4 && <0.4
                  , bytestring                      >=0.9.1.10 && <0.11
                  , case-insensitive                >=0.3 && <1.3
                  , either                          >=3.1 && <5
                  , exceptions                      >=0.1.1 && <1
                  , http-date                       >=0.0.1 && <0.1
                  , http-media                      >=0.4.0 && <0.7
                  , http-types                      >=0.8.0 && <0.9
                  , lens                            >=4.5 && <5
                  , mtl                             >=2.0.1 && <2.3
                  , semigroups                      >=0.8.4 && <1
                  , text                            >=0.11 && <1.3
                  , transformers                    >=0.2 && <0.5
                  , unordered-containers            ==0.2.*
                  , utf8-string                     >=0.3.1 && <1.1

  ghc-options:      -Wall

  hs-source-dirs:   src

  exposed-modules:  Webcrank
                    Webcrank.ServerAPI
                    Webcrank.ServerAPI.WebcrankT
                    Webcrank.Internal
                    Webcrank.Internal.DecisionCore
                    Webcrank.Internal.Halt

  other-modules:    Webcrank.Internal.ETag
                    Webcrank.Internal.HandleRequest
                    Webcrank.Internal.Headers
                    Webcrank.Internal.Parsers
                    Webcrank.Internal.ReqData
                    Webcrank.Internal.ResourceData
                    Webcrank.Internal.Types

test-suite tests
  type:             exitcode-stdio-1.0

  main-is:          tests.hs

  other-modules:    DecisionTests
                  , HandleRequestTests
                  , ParserTests
                  , ResourceTests
                  , TestServerAPI

  hs-source-dirs:   test

  build-depends:    tasty            >= 0.3
                  , tasty-hunit      >= 0.2
                  , tasty-quickcheck >= 0.3

                  , attoparsec                      >=0.10 && <0.13
                  , base                            >=4.6 && < 5
                  , bytestring                      >=0.9.1.10 && <0.11
                  , case-insensitive                >=0.3 && <1.3
                  , exceptions                      >=0.1.1 && <1
                  , http-date                       >=0.0.1 && <0.1
                  , http-media                      >=0.4.0 && <0.7
                  , http-types                      >=0.8.0 && <0.9
                  , lens                            >=4.5 && <5
                  , mtl                             >=2.0.1 && <2.3
                  , unordered-containers            ==0.2.*
                  , webcrank
